# Real-Time-Object-detection-Using-YOLO-v8n-and-RCNN

./: README.md  code.ipynb  convert_to_format.py  load_data.py  pedestrian.yaml  pyproject.toml  requirements.txt  train_yolo.py  video_start.py
runs/detect/train/: args.yaml  results.csv
